--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "description": "gatsby",
-  "author": "KYEONGMIN CHO",
+  "author": "cloudtype",
   "keywords": [
     "gatsby"
   ],
